--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "https://github.com/AlexisLessard/npm-library-test.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/alexislessard"
+  },
   "author": "AlexisLessard",
   "license": "ISC",
   "bugs": {
